tests/analyzer/errors/undeclared_var.rv
fn main() {
    value = 1
}